# ai-studio-hw1

./: .env  HW4_WRITEUP.md  README.md  intro.md  nanda_crewai.py  pyproject.toml  reflection.md  requirements.txt
src/hw1/: crew.py  main.py  voice_cli.py
src/hw1/config/: agents.yaml  tasks.yaml
