[project]
name = "hw1"
version = "0.1.0"
description = "hw1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
hw1 = "hw1.main:run"
run_crew = "hw1.main:run"
train = "hw1.main:train"
replay = "hw1.main:replay"
test = "hw1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
